--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 .general {
     display: grid;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto;
     grid-template-columns: 2fr 1fr;
     grid-template-areas:
         "header header"
-    	"imagen loginCliente"
-    	"imagen loginCliente"
     	"imagen loginUsuario"
-    	"redes  loginUsuario";
+    	"imagen loginUsuario"
+    	"redes loginUsuario";
 }
 .general .imagen {
     grid-area: imagen;
@@ -41,6 +40,13 @@
     font-family: 'Raleway', sans-serif;
 }
 
+.loginModal {
+    float: right;
+    margin-right: 15px;
+    margin-top: 10px;
+    font-family: 'Raleway', sans-serif;
+}
+
 .antiSaltoDeLinea {
     white-space:nowrap;
 }
@@ -55,4 +61,21 @@
 
 .gradienteAzulOscuro {
     background: linear-gradient(to bottom, #343572 8%, #769df2 100%);
+}
+
+.modalGris {
+    background: #40698c;
+}
+
+.fuenteHeader {
+    font-family: 'Raleway', sans-serif;
+}
+
+.fondoGris {
+    background: #404040;
+}
+
+.centrado {
+    text-align: center;
+    margin-bottom: 10px;  
 }
