--- a/styles.css
+++ b/styles.css
@@ -40,11 +40,12 @@
 
 .generalC {
     display: grid;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas:
         "header header header"
-        "perfil pedido misPedidos";
+        "perfil pedido misPedidos"
+        "footer footer footer";
 }
 .generalC .perfil {
     grid-area: perfil;
@@ -62,6 +63,13 @@
     grid-area: header;
     background: #40698c; 
 }
+.general .footer {
+    padding: 15px;
+    grid-area: footer;
+    background: #222222;  
+}
+
+
 
 @import url('https://fonts.googleapis.com/css?family=Raleway:600&display=swap');
 
