--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,19 @@
     background: #222222;  
 }
 
+.cajaSombra {
+    padding: 20px;
+    -webkit-box-shadow: 0px 0px 23px 10px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 0px 23px 10px rgba(0,0,0,0.25);
+    box-shadow: 0px 0px 23px 10px rgba(0,0,0,0.25);
+}
+
+.perfilRedondo {
+    width: 100%;
+    border-radius: 50%;
+    
+}
+
 @import url('https://fonts.googleapis.com/css?family=Raleway:600&display=swap');
 
 .titulo {
